--- a/Public/login.html
+++ b/Public/login.html
@@ -25,7 +25,7 @@
 						<label>Password</label>
 					</div>
 					<button id="login" type="submit">Login</button>
-            
+                </for
                     <a href="./forgotPsw.html"
         ><button class="btn">FORGOT PASSWORD</button></a
       >
@@ -35,7 +35,7 @@
 
 				</div>
 
-		</form>
+		
 	</div>
     <script>
         const form = document.getElementById("form");
