--- a/Public/login.html
+++ b/Public/login.html
@@ -25,10 +25,10 @@
 						<label>Password</label>
 					</div>
 					<button id="login" type="submit">Login</button>
-                </for
-                    <a href="./forgotPsw.html"
-        ><button class="btn">FORGOT PASSWORD</button></a
-      >
+                </form>
+
+                <h5><a href="./forgotPsw.html"></a></h5>
+                    
 
 <h5><a href="./register.html">Don't have an account, Sign up</a></h5>
 					
