--- a/Public/login.html
+++ b/Public/login.html
@@ -27,7 +27,7 @@
 					<button id="login" type="submit">Login</button>
                 </form>
 
-                <h5><a href="./forgotPsw.html"></a></h5>
+                <h5><a href="./forgotPsw.html"> FORGOT PASSWORD</a></h5>
                     
 
 <h5><a href="./register.html">Don't have an account, Sign up</a></h5>
