--- a/Public/register.html
+++ b/Public/register.html
@@ -54,10 +54,10 @@
                 }),
               })
               .then((res) => console.log(res.json()))
-                .then((res) => res.json())
-                .then((data) => {
-                  console.log(data);
-                });
+                // .then((res) => res.json())
+                // .then((data) => {
+                //   console.log(data);
+                // });
             }
             </script>
 </body>
