--- a/Public/products.html
+++ b/Public/products.html
@@ -52,7 +52,7 @@ function showproducts(products) {
 					<td>${ product.price }</td>
 					<td>${ product.weight }</td>
 					<td>${ product.descriptions }</td>
-                    <td>${ product.image }</td>
+                    <td><img src="${ product.image }"></td>
                     <td>${ product.category }</td>
                     <td>${ product.create_date }</td>
                     <td>${ product.stock }</td>
